# sdlMS

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  conanfile.txt
sdlms/: CMakeLists.txt
sdlms/sdlms/: main.cpp
sdlms/sdlms/Components/: AnimatedSprite.h  Avatar.cpp  Avatar.h  Camera.cpp  Camera.h  Component.h  DistanceSprite.cpp  DistanceSprite.h  HVMove.cpp  HVMove.h  HVTile.cpp  HVTile.h  LimitTransform.cpp  LimitTransform.h  Line.cpp  Line.h  Player.h  RandomInput.cpp  RandomInput.h  RelativeTransform.cpp  RelativeTransform.h  Sound.cpp  Sound.h  Sprite.cpp  Sprite.h  Transform.h  Video.cpp  Video.h
sdlms/sdlms/Components/Physic/: Normal.h
sdlms/sdlms/Core/: ECSSystem.h  File.cpp  File.h  FreeType.cpp  FreeType.h  Input.cpp  Input.h  Map.cpp  Map.h  MathHelper.h  Window.cpp  Window.h  World.cpp  World.h
sdlms/sdlms/Entities/: BackGround.cpp  BackGround.h  Character.cpp  FootHold.cpp  FootHold.h  NameTag.cpp  Portal.cpp
sdlms/sdlms/Extension/: CustomSDLExt.h
sdlms/sdlms/Resource/: Resource.h  Wz.cpp  Wz.h
sdlms/sdlms/Systems/: CameraSystem.cpp  CameraSystem.h  RenderSystem.cpp  RenderSystem.h  SoundSystem.cpp  TransformSystem.cpp  VideoSystem.cpp
